# etudier_french

./: .gitignore  AGENTS.md  README.md  design.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.js
public/data/: word_images.json  words.json  words_a1.json  words_a2.json  words_b1.json
scripts/: generate-word-images.mjs  generate_words_dataset.mjs  ui-smoke-safari.mjs
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AppCard.tsx  AppNavigation.tsx  AppShell.tsx  AudioButton.tsx  AudioInputExercise.tsx  CenteredWordBlock.tsx  DailyCompletionScreen.tsx  DictionaryScreen.tsx  FlashcardView.tsx  HomeDashboard.tsx  LessonCard.tsx  LessonChoiceButton.tsx  LessonDurationSelector.tsx  LessonResult.tsx  LessonWordPreview.tsx  MultipleChoiceExercise.tsx  PackCard.tsx  PackDetailScreen.tsx  PackWordRow.tsx  PacksScreen.tsx  ProfileScreen.tsx  ProgressBar.tsx  ProgressHeader.tsx  StatCard.tsx  StatisticsScreen.tsx  StatusBadge.tsx  TopNav.tsx  WordCard.tsx  WordImage.tsx
src/data/: wordPacks.ts  words.ts
src/lib/: audio.ts  exercises.ts  packs.ts  storage.ts  utils.ts  wordImages.ts
src/styles/: app.css  index.css
